--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 </head>
 <body>
-  <picture>
+  <section img>
     <img src="images/pyramid-giza.jpg" alt="Pyramid of Giza">
-  </picture>
-  <h1>Great Pyramid of Giza</h1>
-  <main>
+  </section img>
+  <section>
+    <h1>Great Pyramid of Giza</h1>
+  </section>
+  <section p>
     <p>The Great Pyramid of Giza (also known as the Pyramid of Khufu or the Pyramid of Cheops) is the oldest and largest of the three pyramids in the Giza pyramid complex bordering what is now El Giza, Egypt. It is the oldest of the Seven Wonders of the Ancient World, and the only one to remain largely intact.</p>
-  </main>
+  </section p>
   <footer>Visit Khufu</footer>
 </body>
 </html>
