Update index.html with button element

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
   </section>
   <section>
-    <footer>Visit Khufu</footer>
+    <button type="button">Visit Khufu</button>
   </section>
 </body>
 </html>
