Update index.html button element

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     </div>
   </section>
   <section>
-    <.btn<button type="button" name="button">Visit Khufu</button>
+    <.btn>
+      <button type="button" name="button">Visit Khufu</button>
+    </.btn>
   </section>
 </body>
 </html>
