--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
   </section>
   <section>
-    .<button type="button" name="Visit Khufu">Visit Khufu</button>
+    .<button type="button">Visit Khufu</button>
   </section>
 </body>
 </html>
