Update the html and css elements

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </div>
   </section>
   <section>
-    .<button type="button">Visit Khufu</button>
+    .
+    <button type="button" class=".btn">Visit Khufu</button>
   </section>
 </body>
 </html>
