--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </section>
   <section>
     .
-    <button type="button" name=".btn">Visit Khufu</button>
+    <button type="button" class=".btn">Visit Khufu</button>
   </section>
 </body>
 </html>
