--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
   </section>
   <section>
+    .<button type="button" name="button"></button>
     <button type="button" class=".btn">Visit Khufu</button>
   </section>
 </body>
