Update index.html file

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     </div>
   </section>
   <section>
-    .
-    <button type="button" class=".btn">Visit Khufu</button>
+    <.btn>
+      <button type="button" class=".btn">Visit Khufu</button>
+    </.btn>
   </section>
 </body>
 </html>
