--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 </head>
 <body>
-  <section class="inline">
-    <img src="images/pyramid-giza.jpg" alt="Pyramid of Giza">
+  <section>
+    <div>
+      <img src="images/pyramid-giza.jpg" alt="Pyramid of Giza">
+    </div>
+    <div>
+      <h2>Great Pyramid of Giza</h2>
+      <p>The Great Pyramid of Giza (also known as the Pyramid of Khufu or the Pyramid of Cheops) is the oldest and largest of the three pyramids in the Giza pyramid complex bordering what is now El Giza, Egypt. It is the oldest of the Seven Wonders of the Ancient World, and the only one to remain largely intact.</p>
+      <button type="button" class="btn" value="">Visit Khufu</button>
+    </div>
   </section>
-  <div class="inline">
-    <h2>Great Pyramid of Giza</h2>
-    <p>The Great Pyramid of Giza (also known as the Pyramid of Khufu or the Pyramid of Cheops) is the oldest and largest of the three pyramids in the Giza pyramid complex bordering what is now El Giza, Egypt. It is the oldest of the Seven Wonders of the Ancient World, and the only one to remain largely intact.</p>
-    <button type="button" class="btn" value="">Visit Khufu</button>
-  </div>
 </body>
 </html>
